updating DataSource class